[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenario/World Map.gd" type="Script" id=1]
[ext_resource path="res://Scenario/Render/MapRender.gd" type="Script" id=2]
[ext_resource path="res://Global/SubMenus/In-Game/In-Game Menu.tscn" type="PackedScene" id=3]

[node name="World Map" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Disco" type="Button" parent="CanvasLayer"]
margin_left = 0.00012207
margin_right = 84.0001
margin_bottom = 20.0
rect_scale = Vector2( 3, 3 )
text = "Disconnect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ping" type="Button" parent="CanvasLayer"]
margin_top = 60.0
margin_right = 84.0
margin_bottom = 80.0
rect_scale = Vector2( 3, 3 )
text = "PING"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Region" type="Label" parent="CanvasLayer"]
margin_left = 185.629
margin_top = 155.41
margin_right = 225.629
margin_bottom = 169.41
rect_scale = Vector2( 3, 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer"]
margin_top = 155.41
margin_right = 40.0
margin_bottom = 169.41
rect_scale = Vector2( 3, 3 )
text = "Region:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WIP" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -486.5
margin_top = -270.0
margin_right = 486.5
margin_bottom = 270.0
color = Color( 0.0901961, 0.145098, 0.109804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/WIP"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -323.5
margin_top = -73.3143
margin_right = -173.5
margin_bottom = -33.3143
rect_scale = Vector2( 5, 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/WIP/VBoxContainer"]
margin_right = 150.0
margin_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "Downloading Map"

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/WIP/VBoxContainer"]
margin_top = 18.0
margin_right = 150.0
margin_bottom = 32.0
grow_horizontal = 2
rect_min_size = Vector2( 150, 0 )

[node name="In-Game Menu" parent="." instance=ExtResource( 3 )]

[node name="Itens" parent="In-Game Menu" index="0"]
visible = false

[node name="MapRender" type="Node" parent="."]
script = ExtResource( 2 )
[connection signal="pressed" from="CanvasLayer/Disco" to="." method="_on_Disco_pressed"]
[connection signal="pressed" from="CanvasLayer/Ping" to="." method="_on_Ping_pressed"]

[editable path="In-Game Menu"]
